made it run on virtual thread